--- a/style.css
+++ b/style.css
@@ -7,5 +7,30 @@
 body{
     height: 100vh;
     background-attachment: fixed;
-    background: linear-gradient(tomato, green);
+    background: linear-gradient(#0f0f77 5%, #3535EC);
+}
+
+.piano{
+
+}
+
+.piano-panel{
+    height: 94px;
+    background-color: #f71469;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 24px;
+    background-image: url('images/panel-reflex.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+.piano-panel img{
+    width: 160px;
+}
+
+.piano-keys{
+    height: 190px;
+    background-color: black;
 }
