--- a/style.css
+++ b/style.css
@@ -33,4 +33,28 @@ body{
 .piano-keys{
     height: 190px;
     background-color: black;
+    display: flex;
+}
+
+.key{
+
+}
+
+.key-white{
+    height: 100%;
+    width: 64px;
+    background-color: white;
+    border-right: 2px solid black;
+    border-left: 2px solid black;
+    border-bottom: 6px solid #8c8c8c;
+    border-radius: 0 0 8px;
+}
+
+.key-black{
+    height: 60%;
+    width: 44px;
+    background-color: black;
+    margin-left: -22px;
+    margin-right: -22px;
+    z-index: 2;
 }
