--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@ body{
     height: 100vh;
     background-attachment: fixed;
     background: linear-gradient(#0f0f77 5%, #3535EC);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .piano{
@@ -47,14 +50,26 @@ body{
     border-right: 2px solid black;
     border-left: 2px solid black;
     border-bottom: 6px solid #8c8c8c;
-    border-radius: 0 0 8px;
+    border-radius: 0 0 8px 8px;
+}
+
+.key-white:active{
+    background-color: #dddddd;
 }
 
 .key-black{
     height: 60%;
     width: 44px;
-    background-color: black;
+    background: linear-gradient(#737373 10%, #0d0d0d);
     margin-left: -22px;
     margin-right: -22px;
     z-index: 2;
+    border-right: 6px solid black;
+    border-left: 6px solid black;
+    border-bottom: 6px solid black;
+    border-radius: 0 0 8px 8px;
+}
+
+.key-black:active{
+    background: black;
 }
